kubernetes/apps/default/adventofcode/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adventofcode
  namespace: default
  labels:
    app: adventofcode
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adventofcode
  template:
    metadata:
      labels:
        app: adventofcode
    spec:
      securityContext:
        runAsUser: 2
        runAsGroup: 2
        fsGroup: 2
      imagePullSecrets:
        - name: ghcr-io-registry
      containers:
        - name: adventofcode
          image: ghcr.io/kymppi/aocleaderboard:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: appconfig
              mountPath: /app/
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 20Mi
            limits:
              cpu: 200m
              memory: 200Mi
      volumes:
        - name: config
          configMap:
            name: adventofcodeconfig
        - name: processed
          emptyDir: {}
        - name: appconfig
          emtpyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: adventofcode
spec:
  type: ClusterIP
  selector:
    app: adventofcode
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: adventofcode
  namespace: default
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`advent.procoderhangout.org`)
      kind: Rule
      services:
        - name: adventofcode
          port: 80
          kind: Service
  tls:
    certResolver: le
